app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-web-app
  labels:
    app: quarkus-mysql-app
