app/mysql-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-mysql-app
  namespace: quarkus-web-app
spec:
  to:
    kind: Service
    name: quarkus-mysql-app
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
